--- a/css/style.css
+++ b/css/style.css
@@ -93,3 +93,11 @@
   font-family: 'Roboto', sans-serif;  
   color: antiquewhite;
 }
+
+/*Contato*/
+.contato{
+  color: antiquewhite;
+  font-family: 'Roboto', sans-serif; 
+  margin: 4rem;
+  
+}
